# authcodespace

./: README.md
mart_api/: compose.yaml
mart_api/auth_service/: .env  pyproject.toml
mart_api/auth_service/app/: main.py  settings.py  utils.py  verification.py
mart_api/nodification_service/: .env
mart_api/nodification_service/app/: main.py  settings.py
mart_api/order_service/: .env
mart_api/order_service/app/: main.py
mart_api/products_service/: .env
mart_api/products_service/app/: main.py  settings.py  utils.py  verification.py
